--- a/src/main/webapp/templates/dashboard - Copy.html
+++ b/src/main/webapp/templates/dashboard - Copy.html
@@ -1,4 +1,4 @@
-<div class="row alerts-container" data-ng-controller="AlertsCtrl" data-ng-show="alerts.length">
+<div class="row alerts-container" data-ng-controller="UserCtrl" data-ng-show="alerts.length">
   <div class="col-xs-12">
     <uib-alert data-ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
   </div>
@@ -81,7 +81,7 @@
 	<div class="col-lg-6">
 		<rd-widget>
 			<rd-widget-header icon="fa-users" title="Users">
-				<input type="text" placeholder="Search" class="form-control input-sm" />
+				<input type="text" placeholder="Search" class="form-control input-sm">
 			</rd-widget-header>
 			<rd-widget-body classes="medium no-padding">
 				<div class="table-responsive">
@@ -98,7 +98,7 @@
         		</div>
 			</rd-widget-body>
 		<rd-widget>
-	</div>
+	</rd-widget></rd-widget></div>
 </div>
 
 <div class="row">
@@ -111,7 +111,7 @@
 				<div class="message">
 					This is a standard message which will also work the ".no-padding" class, I can also <span class="error">be an error message!</span>
 				</div>
-				<hr />
+				<hr>
 				<div class="message">
 					<a href="http://angular-ui.github.io/bootstrap/" target="_blank">UI Bootstrap</a> is included, so you can use <a href="#" tooltip="I'm a tooltip!">tooltips</a> and all of the other native Bootstrap JS components!
 				</div>
