--- a/src/main/webapp/templates/employee - Copy (2).html
+++ b/src/main/webapp/templates/employee - Copy (2).html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
 		<rd-widget>
 			<rd-widget-header icon="fa-users" title="Users">
-				<input type="text" placeholder="Search" class="form-control input-sm" />
+				<input type="text" placeholder="Search" class="form-control input-sm">
 			</rd-widget-header>
 			<rd-widget-body classes="medium no-padding">
 				<div class="table-responsive">
@@ -24,23 +24,39 @@
         		</div>
 			</rd-widget-body>
 		<rd-widget>
-	</div>
+	</rd-widget></rd-widget></div>
   <div class="col-lg-12">
   	<form class="form-horizontal">
 	  <div class="form-group">
-	    <label for="inputRole" class="col-sm-2 control-label">Role*</label>
+	    <label for="inputSpark" class="col-sm-2 control-label">Spark Account*</label>
 	    <div class="col-sm-10">
-	      <input type="password" class="form-control" id="inputRole" placeholder="Role">
+	      <input type="password" class="form-control" id="inputSpark" placeholder="Spark Account">
 	    </div>
 	  </div>
-	  
+	  <div class="form-group">
+	    <label for="inputBudget" class="col-sm-2 control-label">Budget*</label>
+	    <div class="col-sm-10">
+	      <input type="email" class="form-control" id="inputBudget" placeholder="Budget">
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputBalance" class="col-sm-2 control-label">Balance*</label>
+	    <div class="col-sm-10">
+	      <input type="password" class="form-control" id="inputBalance" placeholder="Balance">
+	    </div>
+	  </div>
 	  <div class="form-group">
 	    <label for="inputBU" class="col-sm-2 control-label">BU*</label>
 	    <div class="col-sm-10">
 	      <input type="password" class="form-control" id="inputBU" placeholder="BU">
 	    </div>
 	  </div>
-	  
+	  <div class="form-group">
+	    <label for="inputRole" class="col-sm-2 control-label">Role*</label>
+	    <div class="col-sm-10">
+	      <input type="password" class="form-control" id="inputRole" placeholder="Role">
+	    </div>
+	  </div>
 	  <div class="form-group">
 	    <label for="inputJobTitle" class="col-sm-2 control-label">Job Title</label>
 	    <div class="col-sm-10">
