--- a/src/main/webapp/templates/employee - Copy (3).html
+++ b/src/main/webapp/templates/employee - Copy (3).html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
 		<rd-widget>
 			<rd-widget-header icon="fa-users" title="Users">
-				<input type="text" placeholder="Search" class="form-control input-sm" />
+				<input type="text" placeholder="Search" class="form-control input-sm">
 			</rd-widget-header>
 			<rd-widget-body classes="medium no-padding">
 				<div class="table-responsive">
@@ -24,7 +24,7 @@
         		</div>
 			</rd-widget-body>
 		<rd-widget>
-	</div>
+	</rd-widget></rd-widget></div>
   <div class="col-lg-12">
   	<form class="form-horizontal">
 	  <div class="form-group">
